--- a/docker-keepalived/keepalived.conf
+++ b/docker-keepalived/keepalived.conf
@@ -8,7 +8,8 @@
     }   
 
     vrrp_script chk_haproxy {
-        script       "ss -ltn src {{CHECK_IP}} | grep :{{CHECK_PORT}} "
+       # script       "ss -ltn src {{CHECK_IP}} | grep :{{CHECK_PORT}} "
+        wget -s  -T 3 {{CHECK_IP}}:{{CHECK_PORT}} 2>&1 | grep  "Connecting"
         timeout 1
         interval 1   # check every 1 second
         fall 2       # require 2 failures for KO
